# nasringine

./: .build  .buildwin  .gitignore  Makefile  README.md  build
assets/: de.json  es.json  latin.json  latin1.json  latin2.json
src/: CMakeLists.txt  glad.c  json.c  main.c  nasr.c  nasr_audio.c  nasr_audio.h  nasr_input.c  nasr_io.c  nasr_localization.c  nasr_log.c  nasr_math.c  nasr_test.c
src/include/: nasr.h  nasr_audio.h  nasr_input.h  nasr_io.h  nasr_localization.h  nasr_log.h  nasr_math.h  nasr_test.h
src/include/glad/: glad.h
